--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,107 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CLOUD 9 TECHNOLOGY LTD - Your Technology Partner</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Header Section -->
+    <header>
+        <div class="logo">
+            <h1>CLOUD 9 TECHNOLOGY LTD</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <h2>Welcome to CLOUD 9 TECHNOLOGY LTD</h2>
+        <p>Your trusted partner for innovative technology and financial solutions.</p>
+        <a href="#services" class="btn">Explore Our Services</a>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2>Our Services</h2>
+        <div class="service-grid">
+            <div class="service-item">
+                <h3>Agent Banking</h3>
+                <p>Seamless financial services including cash deposits, withdrawals, and transfers.</p>
+            </div>
+            <div class="service-item">
+                <h3>ICT Services</h3>
+                <p>Comprehensive IT solutions for businesses and individuals.</p>
+            </div>
+            <div class="service-item">
+                <h3>Website Design</h3>
+                <p>Custom, responsive, and user-friendly website development.</p>
+            </div>
+            <div class="service-item">
+                <h3>Mobile App Development</h3>
+                <p>Innovative mobile applications for iOS and Android platforms.</p>
+            </div>
+            <div class="service-item">
+                <h3>Graphics Design</h3>
+                <p>Creative designs for logos, banners, and marketing materials.</p>
+            </div>
+            <div class="service-item">
+                <h3>National ID Card Enrollment</h3>
+                <p>Fast and reliable NIN enrollment services.</p>
+            </div>
+            <div class="service-item">
+                <h3>BVN Enrollment</h3>
+                <p>Secure and efficient Bank Verification Number registration.</p>
+            </div>
+            <div class="service-item">
+                <h3>JAMB CBT Training</h3>
+                <p>Expert training for JAMB CBT to ensure success.</p>
+            </div>
+            <div class="service-item">
+                <h3>WAEC, NECO, NABTEB Registration</h3>
+                <p>Hassle-free registration for major Nigerian exams.</p>
+            </div>
+            <div class="service-item">
+                <h3>Issuance of ATM Cards</h3>
+                <p>Quick and secure ATM card issuance for easy banking.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>CLOUD 9 TECHNOLOGY LTD is a leading technology and financial services provider in Nigeria. We are committed to delivering innovative, reliable, and customer-focused solutions to meet your needs. From agent banking to cutting-edge ICT services, we are your one-stop shop for technology and financial empowerment.</p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>Reach out to us for inquiries or to get started with our services.</p>
+        <form>
+            <input type="text" placeholder="Name" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit" class="btn">Send Message</button>
+        </form>
+        <div class="contact-info">
+            <p>Email: info@cloud9techltd.com</p>
+            <p>Phone: +234 123 456 7890</p>
+            <p>Address: 123 Technology Avenue, Lagos, Nigeria</p>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 CLOUD 9 TECHNOLOGY LTD. All rights reserved.</p>
+    </footer>
+</body>
+</html>
